@@ -116,7 +116,7 @@ third-party scripts or to give limited shell access to a user.</p>
 
 <p>SparForte also has a restricted shell mode.  While it can be used
 in the same way, the main purpose of SparForte's restricted shell mode
-is not security.  It is used throughout SparForte as a read-only shell,
+is not security.  It is used throughout SparForte as a read-only mode,
 where full shell capabilities are not required.  For example, web templates
 run in restricted shell mode.</p>
 
