@@ -78,5 +78,13 @@ CHANGES SINCE 1.5
 
 28. New (Jedi Tek'unum): Initial support for Darwin (OS/X)...not fully implemented, doesn't build yet.
 
+29. New. renames (identifier dereferencing)...variable declaration renaming.  [tests needed] [renamings of proc, funcs, aggregate elements] [env needs updating for renamings] [unset needs updating for renamings]
+Examples:
+   j : integer renames i;
+   b : arrtype renames a;
+   s : rectype renames r;
+
+30. New: experimental support for in, out and in out parameters in user-defined functions and procedures.  Note that only identifier names, not references to elements of arrays or records, are supported. [tests needed][unset needs updating]
+
 [David B wants shared library]
 
